[package]
name = "spulse"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for querying and analyzing Soroban Pulse events locally"
license = "MIT"
repository = "https://github.com/soroban-pulse/soroban-pulse"
homepage = "https://github.com/soroban-pulse/soroban-pulse/tree/main/cli"
keywords = ["soroban", "stellar", "blockchain", "cli", "events"]
categories = ["command-line-utilities"]
authors = ["Soroban Pulse Contributors"]
readme = "README.md"

[[bin]]
name = "spulse"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "color"] }

# HTTP client (blocking — simpler for a CLI)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Output formats
csv = "1"
comfy-table = "7"

# Config file
toml = "0.8"
directories = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
indicatif = "0.17"
